More updates to new page

--- a/impressoras.html
+++ b/impressoras.html
@@ -94,6 +94,11 @@
                                         de trabalhos de impressão para garantir que você saiba como utilizá-la de forma segura 
                                         e eficiente. Conte conosco para configurar e treinar o uso da sua impressora.
                                     </p>
+                                    <p class="alternative-p">
+                                        <a class="btn btn-primary" href="https://wa.me/555193599834?text=Olá%2C+gostaria+de+informações+sobre+instalação+e+configuração+de+impressoras">
+                                            Clique e saiba mais...
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -112,6 +117,11 @@
                                         móveis, incluindo o sistema de transporte do material e a cabeça de impressão, para garantir 
                                         a melhor performance possível. Conte conosco para manter sua impressora em ótimo estado.
                                     </p>
+                                    <p class="alternative-p">
+                                        <a class="btn btn-primary" href="https://wa.me/555193599834?text=Olá%2C+gostaria+de+informações+sobre+manutenção+de+impressoras">
+                                            Clique e saiba mais...
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -129,6 +139,11 @@
                                         necessidades com suporte remoto. Conte conosco para garantir a eficiência 
                                         do trabalho em seu escritório ou empresa, sem se preocupar com problemas técnicos em sua impressora.
                                     </p>
+                                    <p class="alternative-p">
+                                        <a class="btn btn-primary" href="https://wa.me/555193599834?text=Olá%2C+gostaria+de+informações+sobre+suporte+técnico+de+impressoras">
+                                            Clique e saiba mais...
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -145,6 +160,11 @@
                                         Profissionais capacitados realizando a troca de cartuchos de tinta ou toner garantem o bom 
                                         funcionamento do equipamento. Com nosso serviço, você pode prolongar a vida útil da sua impressora 
                                         e garantir a qualidade das impressões.
+                                    </p>
+                                    <p class="alternative-p">
+                                        <a class="btn btn-primary" href="https://wa.me/555193599834?text=Olá%2C+gostaria+de+informações+sobre+reposição+de+suprimento+de+impressoras">
+                                            Clique e saiba mais...
+                                        </a>
                                     </p>
                                 </div>
                             </div>
@@ -166,25 +186,25 @@
                                 <i class="far fa-check-circle fa-lg"></i>
                             </div>
                             <div class="col-11 mb-2">
-                                <p class="fs-4 fw-light mb-0">Instalação profissional: garantimos operação sem falhas com instalação e treinamento profissionais.</p>
+                                <p class="fs-4 fw-light mb-0"><strong>Instalação profissional</strong>: garantimos operação sem falhas com instalação e treinamento profissionais.</p>
                             </div>
                             <div class="col-1 text-success d-flex align-items-center justify-content-center">
                                 <i class="far fa-check-circle fa-lg"></i>
                             </div>
                             <div class="col-11 mb-2">
-                                <p class="fs-4 fw-light mb-0">Peças originais de alta qualidade: usamos apenas peças originais de alta qualidade em nosso serviço de reparação.</p>
+                                <p class="fs-4 fw-light mb-0"><strong>Peças de alta qualidade</strong>: usamos apenas peças de alta qualidade em nosso serviço de reparação.</p>
                             </div>
                             <div class="col-1 text-success d-flex align-items-center justify-content-center">
                                 <i class="far fa-check-circle fa-lg"></i>
                             </div>
                             <div class="col-11 mb-2">
-                                <p class="fs-4 fw-light mb-0">Suporte confiável: oferecemos suporte técnico confiável em todas as questões.</p>
+                                <p class="fs-4 fw-light mb-0"><strong>Suporte confiável</strong>: oferecemos suporte técnico confiável em todas as questões.</p>
                             </div>
                             <div class="col-1 text-success d-flex align-items-center justify-content-center">
                                 <i class="far fa-check-circle fa-lg"></i>
                             </div>
                             <div class="col-11 mb-2">
-                                <p class="fs-4 fw-light mb-0">Manutenção regular: realizamos manutenções regulares para manter suas impressoras em ótimas condições.</p>
+                                <p class="fs-4 fw-light mb-0"><strong>Manutenção regular</strong>: realizamos manutenções regulares para manter suas impressoras em ótimas condições.</p>
                             </div>                         
                         </div>
                     </div>
